# early-malay-printed-books

./: .gitignore  LICENSE  README.md  calc_token_count.py  environment.yml  main.py  pyproject.toml  pytest.toml
emp/: __init__.py  dataset.py  features.py  plots.py  xml_extraction.py
emp/modeling/: predict.py  train.py
models/prompt_outputs/: prompt_output_log.csv
models/prompts/: prompt_output_log.csv
models/prompts_outputs/: prompt_output_log.csv
notebooks/: 01-HL-extract_data.ipynb  02-HL-prepare_entries.ipynb  03-HL-check_outputs.ipynb  04-HL-select_editions.ipynb  convert_to_mrc.ipynb  extract_data.ipynb
tests/: test_dataset.py  test_xml_extraction.py
