[project]
name = "emp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pymarc>=5.3.1",
    "pymupdf>=1.26.5",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.2",
]
